force-app/main/default/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Name__c</fullName>
        <description>Used for Conga Document generation - Quote Template</description>
        <formula>Marketing_Plan__r.Name</formula>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Package_Code__c</fullName>
        <formula>Marketing_Plan__r.Plan_Component_Code__c</formula>
        <label>Marketing Plan Package Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between Quote Line Item and Marketing Plan - To be Depracated for Purchaser Plan in Healthcloud GA</description>
        <label>Marketing Plan</label>
        <referenceTo>Marketing_Plan__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchaser_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Purchaser Plan - Use for Healthcloud GA</description>
        <label>Purchaser Plan</label>
        <referenceTo>PurchaserPlan</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Child__c</fullName>
        <label>Subscriber And Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Children__c</fullName>
        <label>Subscriber And Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Family__c</fullName>
        <label>Subscriber And Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Spouse__c</fullName>
        <label>Subscriber And Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_Code__c</fullName>
        <label>Tier Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Tier</fullName>
                </value>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>